# cilosDB

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md
client-libs/php/: HybridDB.php
client-libs/python/: hybriddb.py
data/: database.json
include/: hybriddb.h
src/server/: main.cpp
src/storage/: storage.cpp
web/admin/: index.html
web/user/: dashboard.php  index.php
